🎨[fix]: Align

--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -79,6 +79,13 @@ header .contato ul {
 	font-size: 1rem;
 }
 
+header .contato li a{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	gap: 15px;
+}
+
 .igorroc {
 	background-color: var(--cl-principal);
 	color: var(--cl-title);
